# simpleRPG

./: .editorconfig  .gitignore  README.md  ideas.md  notes.md
builder/: Cargo.toml
builder/src/: builder.rs  challenges.rs  components.rs  conversations.rs  counts.rs  counts.rs.bak  entities.rs  main.rs  main_file.rs  vending.rs
data/: 1752956389.yml  1752956859.yml  1752956972.yml  1752957091.yml  1754094854.yml  1754094898.yml  1754097272.yml  1754762620.yml  1754943165.yml  1754951709.yml  1754951881.yml  1755115461.yml  1755192213.yml  1761856228.yml  game.yml
data/cards/: 1763946645.yml
docs/: CHALLENGES.md  notes.md
game/: Cargo.toml  log.txt
game/config/: log4rs.yaml
game/src/: action.rs  app.rs  app_data.rs  app_handle_input.rs  app_loop.rs  app_save_files.rs  cli_interface.rs  constants.rs  conversation_action.rs  frame.rs  game.rs  game_action.rs  game_mode.rs  interface.rs  interface_input.rs  interface_render.rs  log.rs  macroquad_interface.rs  main.rs  main_menu_action.rs  mode.rs  platform.rs  scene.rs  state.rs  vending_action.rs
game/src/data/: challenges.rs  challenges_impl.rs  components.rs  components_impl.rs  conversations.rs  event.rs  items.rs  mod.rs  state.rs  vending.rs
game/src/input/: input.rs  key_code.rs  macroquad_input.rs  mod.rs  ratatui_input.rs
game/src/renderer/: frame.rs  macroquad_renderer.rs  mod.rs  ratatui_renderer.rs  renderer.rs
templates/: challenge.yml  challenge_cards.yml  challenge_type.yml  conversation.yml  exit.yml  item.yml  location.yml  person.yml  player_card.yml  vending.yml
(+17 files in other folders)
