[package]
name = "simpleRPG"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
macroquad = "0.4.14"
rand = "0.9.2"
ratatui = "0.29.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[lints.rust]
non_camel_case_types = "allow"

[lints.clippy]
non_shorthand_field_patterns = "forbid"
